ASN_MODULE_SRCS=	\
	s1ap/S1AP_S1AP-PDU.c	\
	s1ap/S1AP_InitiatingMessage.c	\
	s1ap/S1AP_SuccessfulOutcome.c	\
	s1ap/S1AP_UnsuccessfulOutcome.c	\
	s1ap/S1AP_E-RAB-IE-ContainerList.c	\
	s1ap/S1AP_HandoverRequired.c	\
	s1ap/S1AP_HandoverCommand.c	\
	s1ap/S1AP_E-RABSubjecttoDataForwardingList.c	\
	s1ap/S1AP_E-RABDataForwardingItem.c	\
	s1ap/S1AP_HandoverPreparationFailure.c	\
	s1ap/S1AP_HandoverRequest.c	\
	s1ap/S1AP_E-RABToBeSetupListHOReq.c	\
	s1ap/S1AP_E-RABToBeSetupItemHOReq.c	\
	s1ap/S1AP_HandoverRequestAcknowledge.c	\
	s1ap/S1AP_E-RABAdmittedList.c	\
	s1ap/S1AP_E-RABAdmittedItem.c	\
	s1ap/S1AP_E-RABFailedtoSetupListHOReqAck.c	\
	s1ap/S1AP_E-RABFailedToSetupItemHOReqAck.c	\
	s1ap/S1AP_HandoverFailure.c	\
	s1ap/S1AP_HandoverNotify.c	\
	s1ap/S1AP_PathSwitchRequest.c	\
	s1ap/S1AP_E-RABToBeSwitchedDLList.c	\
	s1ap/S1AP_E-RABToBeSwitchedDLItem.c	\
	s1ap/S1AP_PathSwitchRequestAcknowledge.c	\
	s1ap/S1AP_E-RABToBeSwitchedULList.c	\
	s1ap/S1AP_E-RABToBeSwitchedULItem.c	\
	s1ap/S1AP_PathSwitchRequestFailure.c	\
	s1ap/S1AP_HandoverCancel.c	\
	s1ap/S1AP_HandoverCancelAcknowledge.c	\
	s1ap/S1AP_E-RABSetupRequest.c	\
	s1ap/S1AP_E-RABToBeSetupListBearerSUReq.c	\
	s1ap/S1AP_E-RABToBeSetupItemBearerSUReq.c	\
	s1ap/S1AP_E-RABSetupResponse.c	\
	s1ap/S1AP_E-RABSetupListBearerSURes.c	\
	s1ap/S1AP_E-RABSetupItemBearerSURes.c	\
	s1ap/S1AP_E-RABModifyRequest.c	\
	s1ap/S1AP_E-RABToBeModifiedListBearerModReq.c	\
	s1ap/S1AP_E-RABToBeModifiedItemBearerModReq.c	\
	s1ap/S1AP_E-RABModifyResponse.c	\
	s1ap/S1AP_E-RABModifyListBearerModRes.c	\
	s1ap/S1AP_E-RABModifyItemBearerModRes.c	\
	s1ap/S1AP_E-RABReleaseCommand.c	\
	s1ap/S1AP_E-RABReleaseResponse.c	\
	s1ap/S1AP_E-RABReleaseListBearerRelComp.c	\
	s1ap/S1AP_E-RABReleaseItemBearerRelComp.c	\
	s1ap/S1AP_E-RABReleaseIndication.c	\
	s1ap/S1AP_InitialContextSetupRequest.c	\
	s1ap/S1AP_E-RABToBeSetupListCtxtSUReq.c	\
	s1ap/S1AP_E-RABToBeSetupItemCtxtSUReq.c	\
	s1ap/S1AP_InitialContextSetupResponse.c	\
	s1ap/S1AP_E-RABSetupListCtxtSURes.c	\
	s1ap/S1AP_E-RABSetupItemCtxtSURes.c	\
	s1ap/S1AP_InitialContextSetupFailure.c	\
	s1ap/S1AP_Paging.c	\
	s1ap/S1AP_TAIList.c	\
	s1ap/S1AP_TAIItem.c	\
	s1ap/S1AP_UEContextReleaseRequest.c	\
	s1ap/S1AP_UEContextReleaseCommand.c	\
	s1ap/S1AP_UEContextReleaseComplete.c	\
	s1ap/S1AP_UEContextModificationRequest.c	\
	s1ap/S1AP_UEContextModificationResponse.c	\
	s1ap/S1AP_UEContextModificationFailure.c	\
	s1ap/S1AP_UERadioCapabilityMatchRequest.c	\
	s1ap/S1AP_UERadioCapabilityMatchResponse.c	\
	s1ap/S1AP_DownlinkNASTransport.c	\
	s1ap/S1AP_InitialUEMessage.c	\
	s1ap/S1AP_UplinkNASTransport.c	\
	s1ap/S1AP_NASNonDeliveryIndication.c	\
	s1ap/S1AP_RerouteNASRequest.c	\
	s1ap/S1AP_NASDeliveryIndication.c	\
	s1ap/S1AP_Reset.c	\
	s1ap/S1AP_ResetType.c	\
	s1ap/S1AP_ResetAll.c	\
	s1ap/S1AP_UE-associatedLogicalS1-ConnectionListRes.c	\
	s1ap/S1AP_ResetAcknowledge.c	\
	s1ap/S1AP_UE-associatedLogicalS1-ConnectionListResAck.c	\
	s1ap/S1AP_ErrorIndication.c	\
	s1ap/S1AP_S1SetupRequest.c	\
	s1ap/S1AP_S1SetupResponse.c	\
	s1ap/S1AP_S1SetupFailure.c	\
	s1ap/S1AP_ENBConfigurationUpdate.c	\
	s1ap/S1AP_ENBConfigurationUpdateAcknowledge.c	\
	s1ap/S1AP_ENBConfigurationUpdateFailure.c	\
	s1ap/S1AP_MMEConfigurationUpdate.c	\
	s1ap/S1AP_MMEConfigurationUpdateAcknowledge.c	\
	s1ap/S1AP_MMEConfigurationUpdateFailure.c	\
	s1ap/S1AP_DownlinkS1cdma2000tunnelling.c	\
	s1ap/S1AP_UplinkS1cdma2000tunnelling.c	\
	s1ap/S1AP_UECapabilityInfoIndication.c	\
	s1ap/S1AP_ENBStatusTransfer.c	\
	s1ap/S1AP_MMEStatusTransfer.c	\
	s1ap/S1AP_TraceStart.c	\
	s1ap/S1AP_TraceFailureIndication.c	\
	s1ap/S1AP_DeactivateTrace.c	\
	s1ap/S1AP_CellTrafficTrace.c	\
	s1ap/S1AP_LocationReportingControl.c	\
	s1ap/S1AP_LocationReportingFailureIndication.c	\
	s1ap/S1AP_LocationReport.c	\
	s1ap/S1AP_OverloadStart.c	\
	s1ap/S1AP_OverloadStop.c	\
	s1ap/S1AP_WriteReplaceWarningRequest.c	\
	s1ap/S1AP_WriteReplaceWarningResponse.c	\
	s1ap/S1AP_ENBDirectInformationTransfer.c	\
	s1ap/S1AP_Inter-SystemInformationTransferType.c	\
	s1ap/S1AP_MMEDirectInformationTransfer.c	\
	s1ap/S1AP_ENBConfigurationTransfer.c	\
	s1ap/S1AP_MMEConfigurationTransfer.c	\
	s1ap/S1AP_PrivateMessage.c	\
	s1ap/S1AP_KillRequest.c	\
	s1ap/S1AP_KillResponse.c	\
	s1ap/S1AP_PWSRestartIndication.c	\
	s1ap/S1AP_PWSFailureIndication.c	\
	s1ap/S1AP_DownlinkUEAssociatedLPPaTransport.c	\
	s1ap/S1AP_UplinkUEAssociatedLPPaTransport.c	\
	s1ap/S1AP_DownlinkNonUEAssociatedLPPaTransport.c	\
	s1ap/S1AP_UplinkNonUEAssociatedLPPaTransport.c	\
	s1ap/S1AP_E-RABModificationIndication.c	\
	s1ap/S1AP_E-RABToBeModifiedListBearerModInd.c	\
	s1ap/S1AP_E-RABToBeModifiedItemBearerModInd.c	\
	s1ap/S1AP_E-RABNotToBeModifiedListBearerModInd.c	\
	s1ap/S1AP_E-RABNotToBeModifiedItemBearerModInd.c	\
	s1ap/S1AP_CSGMembershipInfo.c	\
	s1ap/S1AP_E-RABModificationConfirm.c	\
	s1ap/S1AP_E-RABModifyListBearerModConf.c	\
	s1ap/S1AP_E-RABModifyItemBearerModConf.c	\
	s1ap/S1AP_UEContextModificationIndication.c	\
	s1ap/S1AP_UEContextModificationConfirm.c	\
	s1ap/S1AP_UEContextSuspendRequest.c	\
	s1ap/S1AP_UEContextSuspendResponse.c	\
	s1ap/S1AP_UEContextResumeRequest.c	\
	s1ap/S1AP_E-RABFailedToResumeListResumeReq.c	\
	s1ap/S1AP_E-RABFailedToResumeItemResumeReq.c	\
	s1ap/S1AP_UEContextResumeResponse.c	\
	s1ap/S1AP_E-RABFailedToResumeListResumeRes.c	\
	s1ap/S1AP_E-RABFailedToResumeItemResumeRes.c	\
	s1ap/S1AP_UEContextResumeFailure.c	\
	s1ap/S1AP_ConnectionEstablishmentIndication.c	\
	s1ap/S1AP_RetrieveUEInformation.c	\
	s1ap/S1AP_UEInformationTransfer.c	\
	s1ap/S1AP_ENBCPRelocationIndication.c	\
	s1ap/S1AP_MMECPRelocationIndication.c	\
	s1ap/S1AP_Additional-GUTI.c	\
	s1ap/S1AP_AreaScopeOfMDT.c	\
	s1ap/S1AP_AllocationAndRetentionPriority.c	\
	s1ap/S1AP_AssistanceDataForCECapableUEs.c	\
	s1ap/S1AP_AssistanceDataForPaging.c	\
	s1ap/S1AP_AssistanceDataForRecommendedCells.c	\
	s1ap/S1AP_Bearers-SubjectToStatusTransferList.c	\
	s1ap/S1AP_Bearers-SubjectToStatusTransfer-Item.c	\
	s1ap/S1AP_BearerType.c	\
	s1ap/S1AP_BitRate.c	\
	s1ap/S1AP_BPLMNs.c	\
	s1ap/S1AP_BroadcastCancelledAreaList.c	\
	s1ap/S1AP_BroadcastCompletedAreaList.c	\
	s1ap/S1AP_CancelledCellinEAI.c	\
	s1ap/S1AP_CancelledCellinEAI-Item.c	\
	s1ap/S1AP_CancelledCellinTAI.c	\
	s1ap/S1AP_CancelledCellinTAI-Item.c	\
	s1ap/S1AP_Cause.c	\
	s1ap/S1AP_CauseMisc.c	\
	s1ap/S1AP_CauseProtocol.c	\
	s1ap/S1AP_CauseRadioNetwork.c	\
	s1ap/S1AP_CauseTransport.c	\
	s1ap/S1AP_CauseNas.c	\
	s1ap/S1AP_CellAccessMode.c	\
	s1ap/S1AP_CellIdentifierAndCELevelForCECapableUEs.c	\
	s1ap/S1AP_CELevel.c	\
	s1ap/S1AP_CE-mode-B-SupportIndicator.c	\
	s1ap/S1AP_CellIdentity.c	\
	s1ap/S1AP_CellID-Broadcast.c	\
	s1ap/S1AP_CellID-Broadcast-Item.c	\
	s1ap/S1AP_CellID-Cancelled.c	\
	s1ap/S1AP_CellID-Cancelled-Item.c	\
	s1ap/S1AP_CellBasedMDT.c	\
	s1ap/S1AP_CellIdListforMDT.c	\
	s1ap/S1AP_Cdma2000PDU.c	\
	s1ap/S1AP_Cdma2000RATType.c	\
	s1ap/S1AP_Cdma2000SectorID.c	\
	s1ap/S1AP_Cdma2000HOStatus.c	\
	s1ap/S1AP_Cdma2000HORequiredIndication.c	\
	s1ap/S1AP_Cdma2000OneXSRVCCInfo.c	\
	s1ap/S1AP_Cdma2000OneXMEID.c	\
	s1ap/S1AP_Cdma2000OneXMSI.c	\
	s1ap/S1AP_Cdma2000OneXPilot.c	\
	s1ap/S1AP_Cdma2000OneXRAND.c	\
	s1ap/S1AP_Cell-Size.c	\
	s1ap/S1AP_CellType.c	\
	s1ap/S1AP_CGI.c	\
	s1ap/S1AP_CI.c	\
	s1ap/S1AP_CNDomain.c	\
	s1ap/S1AP_ConcurrentWarningMessageIndicator.c	\
	s1ap/S1AP_Correlation-ID.c	\
	s1ap/S1AP_CSFallbackIndicator.c	\
	s1ap/S1AP_AdditionalCSFallbackIndicator.c	\
	s1ap/S1AP_CSG-Id.c	\
	s1ap/S1AP_CSG-IdList.c	\
	s1ap/S1AP_CSG-IdList-Item.c	\
	s1ap/S1AP_CSGMembershipStatus.c	\
	s1ap/S1AP_COUNTvalue.c	\
	s1ap/S1AP_COUNTValueExtended.c	\
	s1ap/S1AP_COUNTvaluePDCP-SNlength18.c	\
	s1ap/S1AP_Coverage-Level.c	\
	s1ap/S1AP_CriticalityDiagnostics.c	\
	s1ap/S1AP_CriticalityDiagnostics-IE-List.c	\
	s1ap/S1AP_CriticalityDiagnostics-IE-Item.c	\
	s1ap/S1AP_DataCodingScheme.c	\
	s1ap/S1AP_DCN-ID.c	\
	s1ap/S1AP_ServedDCNs.c	\
	s1ap/S1AP_ServedDCNsItem.c	\
	s1ap/S1AP_DL-CP-SecurityInformation.c	\
	s1ap/S1AP_DL-Forwarding.c	\
	s1ap/S1AP_DL-NAS-MAC.c	\
	s1ap/S1AP_Direct-Forwarding-Path-Availability.c	\
	s1ap/S1AP_Data-Forwarding-Not-Possible.c	\
	s1ap/S1AP_DLNASPDUDeliveryAckRequest.c	\
	s1ap/S1AP_EARFCN.c	\
	s1ap/S1AP_ECGIList.c	\
	s1ap/S1AP_PWSfailedECGIList.c	\
	s1ap/S1AP_EmergencyAreaIDList.c	\
	s1ap/S1AP_EmergencyAreaID.c	\
	s1ap/S1AP_EmergencyAreaID-Broadcast.c	\
	s1ap/S1AP_EmergencyAreaID-Broadcast-Item.c	\
	s1ap/S1AP_EmergencyAreaID-Cancelled.c	\
	s1ap/S1AP_EmergencyAreaID-Cancelled-Item.c	\
	s1ap/S1AP_CompletedCellinEAI.c	\
	s1ap/S1AP_CompletedCellinEAI-Item.c	\
	s1ap/S1AP_ECGI-List.c	\
	s1ap/S1AP_EmergencyAreaIDListForRestart.c	\
	s1ap/S1AP_ENB-ID.c	\
	s1ap/S1AP_GERAN-Cell-ID.c	\
	s1ap/S1AP_Global-ENB-ID.c	\
	s1ap/S1AP_GUMMEIList.c	\
	s1ap/S1AP_ENB-StatusTransfer-TransparentContainer.c	\
	s1ap/S1AP_ENB-UE-S1AP-ID.c	\
	s1ap/S1AP_ENBname.c	\
	s1ap/S1AP_ENBX2TLAs.c	\
	s1ap/S1AP_EncryptionAlgorithms.c	\
	s1ap/S1AP_EnhancedCoverageRestricted.c	\
	s1ap/S1AP_EPLMNs.c	\
	s1ap/S1AP_EventType.c	\
	s1ap/S1AP_E-RAB-ID.c	\
	s1ap/S1AP_E-RABInformationList.c	\
	s1ap/S1AP_E-RABInformationListItem.c	\
	s1ap/S1AP_E-RABList.c	\
	s1ap/S1AP_E-RABItem.c	\
	s1ap/S1AP_E-RABLevelQoSParameters.c	\
	s1ap/S1AP_EUTRAN-CGI.c	\
	s1ap/S1AP_EUTRANRoundTripDelayEstimationInfo.c	\
	s1ap/S1AP_ExpectedUEBehaviour.c	\
	s1ap/S1AP_ExpectedUEActivityBehaviour.c	\
	s1ap/S1AP_ExpectedActivityPeriod.c	\
	s1ap/S1AP_ExpectedIdlePeriod.c	\
	s1ap/S1AP_SourceOfUEActivityBehaviourInformation.c	\
	s1ap/S1AP_ExpectedHOInterval.c	\
	s1ap/S1AP_ExtendedRNC-ID.c	\
	s1ap/S1AP_ExtendedRepetitionPeriod.c	\
	s1ap/S1AP_Extended-UEIdentityIndexValue.c	\
	s1ap/S1AP_ForbiddenInterRATs.c	\
	s1ap/S1AP_ForbiddenTAs.c	\
	s1ap/S1AP_ForbiddenTAs-Item.c	\
	s1ap/S1AP_ForbiddenTACs.c	\
	s1ap/S1AP_ForbiddenLAs.c	\
	s1ap/S1AP_ForbiddenLAs-Item.c	\
	s1ap/S1AP_ForbiddenLACs.c	\
	s1ap/S1AP_GBR-QosInformation.c	\
	s1ap/S1AP_GTP-TEID.c	\
	s1ap/S1AP_GUMMEI.c	\
	s1ap/S1AP_GUMMEIType.c	\
	s1ap/S1AP_GWContextReleaseIndication.c	\
	s1ap/S1AP_HandoverRestrictionList.c	\
	s1ap/S1AP_HandoverType.c	\
	s1ap/S1AP_HFN.c	\
	s1ap/S1AP_HFNModified.c	\
	s1ap/S1AP_HFNforPDCP-SNlength18.c	\
	s1ap/S1AP_Masked-IMEISV.c	\
	s1ap/S1AP_ImmediateMDT.c	\
	s1ap/S1AP_IMSI.c	\
	s1ap/S1AP_InformationOnRecommendedCellsAndENBsForPaging.c	\
	s1ap/S1AP_IntegrityProtectionAlgorithms.c	\
	s1ap/S1AP_IntendedNumberOfPagingAttempts.c	\
	s1ap/S1AP_InterfacesToTrace.c	\
	s1ap/S1AP_KillAllWarningMessages.c	\
	s1ap/S1AP_LAC.c	\
	s1ap/S1AP_LAI.c	\
	s1ap/S1AP_LastVisitedCell-Item.c	\
	s1ap/S1AP_LastVisitedEUTRANCellInformation.c	\
	s1ap/S1AP_LastVisitedUTRANCellInformation.c	\
	s1ap/S1AP_LastVisitedGERANCellInformation.c	\
	s1ap/S1AP_L3-Information.c	\
	s1ap/S1AP_LPPa-PDU.c	\
	s1ap/S1AP_LHN-ID.c	\
	s1ap/S1AP_Links-to-log.c	\
	s1ap/S1AP_ListeningSubframePattern.c	\
	s1ap/S1AP_LoggedMDT.c	\
	s1ap/S1AP_LoggingInterval.c	\
	s1ap/S1AP_LoggingDuration.c	\
	s1ap/S1AP_LoggedMBSFNMDT.c	\
	s1ap/S1AP_M3Configuration.c	\
	s1ap/S1AP_M3period.c	\
	s1ap/S1AP_M4Configuration.c	\
	s1ap/S1AP_M4period.c	\
	s1ap/S1AP_M5Configuration.c	\
	s1ap/S1AP_M5period.c	\
	s1ap/S1AP_M6Configuration.c	\
	s1ap/S1AP_M6report-Interval.c	\
	s1ap/S1AP_M6delay-threshold.c	\
	s1ap/S1AP_M7Configuration.c	\
	s1ap/S1AP_M7period.c	\
	s1ap/S1AP_MDT-Activation.c	\
	s1ap/S1AP_MDT-Location-Info.c	\
	s1ap/S1AP_MDT-Configuration.c	\
	s1ap/S1AP_ManagementBasedMDTAllowed.c	\
	s1ap/S1AP_MBSFN-ResultToLog.c	\
	s1ap/S1AP_MBSFN-ResultToLogInfo.c	\
	s1ap/S1AP_MDTPLMNList.c	\
	s1ap/S1AP_PrivacyIndicator.c	\
	s1ap/S1AP_MDTMode.c	\
	s1ap/S1AP_MDTMode-Extension.c	\
	s1ap/S1AP_MeasurementsToActivate.c	\
	s1ap/S1AP_MeasurementThresholdA2.c	\
	s1ap/S1AP_MessageIdentifier.c	\
	s1ap/S1AP_MobilityInformation.c	\
	s1ap/S1AP_MMEname.c	\
	s1ap/S1AP_MMEPagingTarget.c	\
	s1ap/S1AP_MMERelaySupportIndicator.c	\
	s1ap/S1AP_MME-Group-ID.c	\
	s1ap/S1AP_MME-Code.c	\
	s1ap/S1AP_MME-UE-S1AP-ID.c	\
	s1ap/S1AP_M-TMSI.c	\
	s1ap/S1AP_MSClassmark2.c	\
	s1ap/S1AP_MSClassmark3.c	\
	s1ap/S1AP_MutingAvailabilityIndication.c	\
	s1ap/S1AP_MutingPatternInformation.c	\
	s1ap/S1AP_NAS-PDU.c	\
	s1ap/S1AP_NASSecurityParametersfromE-UTRAN.c	\
	s1ap/S1AP_NASSecurityParameterstoE-UTRAN.c	\
	s1ap/S1AP_NB-IoT-DefaultPagingDRX.c	\
	s1ap/S1AP_NB-IoT-Paging-eDRXInformation.c	\
	s1ap/S1AP_NB-IoT-Paging-eDRX-Cycle.c	\
	s1ap/S1AP_NB-IoT-PagingTimeWindow.c	\
	s1ap/S1AP_NB-IoT-UEIdentityIndexValue.c	\
	s1ap/S1AP_NextPagingAreaScope.c	\
	s1ap/S1AP_NumberofBroadcastRequest.c	\
	s1ap/S1AP_NumberOfBroadcasts.c	\
	s1ap/S1AP_OldBSS-ToNewBSS-Information.c	\
	s1ap/S1AP_OverloadAction.c	\
	s1ap/S1AP_OverloadResponse.c	\
	s1ap/S1AP_PagingAttemptInformation.c	\
	s1ap/S1AP_PagingAttemptCount.c	\
	s1ap/S1AP_Paging-eDRXInformation.c	\
	s1ap/S1AP_Paging-eDRX-Cycle.c	\
	s1ap/S1AP_PagingTimeWindow.c	\
	s1ap/S1AP_PagingDRX.c	\
	s1ap/S1AP_PagingPriority.c	\
	s1ap/S1AP_PDCP-SN.c	\
	s1ap/S1AP_PDCP-SNExtended.c	\
	s1ap/S1AP_PDCP-SNlength18.c	\
	s1ap/S1AP_M1PeriodicReporting.c	\
	s1ap/S1AP_PLMNidentity.c	\
	s1ap/S1AP_Port-Number.c	\
	s1ap/S1AP_Pre-emptionCapability.c	\
	s1ap/S1AP_Pre-emptionVulnerability.c	\
	s1ap/S1AP_PriorityLevel.c	\
	s1ap/S1AP_ProSeAuthorized.c	\
	s1ap/S1AP_ProSeDirectDiscovery.c	\
	s1ap/S1AP_ProSeUEtoNetworkRelaying.c	\
	s1ap/S1AP_ProSeDirectCommunication.c	\
	s1ap/S1AP_PS-ServiceNotAvailable.c	\
	s1ap/S1AP_QCI.c	\
	s1ap/S1AP_ReceiveStatusofULPDCPSDUs.c	\
	s1ap/S1AP_ReceiveStatusOfULPDCPSDUsExtended.c	\
	s1ap/S1AP_ReceiveStatusOfULPDCPSDUsPDCP-SNlength18.c	\
	s1ap/S1AP_RecommendedCellsForPaging.c	\
	s1ap/S1AP_RecommendedCellList.c	\
	s1ap/S1AP_RecommendedCellItem.c	\
	s1ap/S1AP_RecommendedENBsForPaging.c	\
	s1ap/S1AP_RecommendedENBList.c	\
	s1ap/S1AP_RecommendedENBItem.c	\
	s1ap/S1AP_RelativeMMECapacity.c	\
	s1ap/S1AP_RelayNode-Indicator.c	\
	s1ap/S1AP_RAC.c	\
	s1ap/S1AP_RAT-Type.c	\
	s1ap/S1AP_ReportAmountMDT.c	\
	s1ap/S1AP_ReportIntervalMDT.c	\
	s1ap/S1AP_M1ReportingTrigger.c	\
	s1ap/S1AP_RequestType.c	\
	s1ap/S1AP_RIMTransfer.c	\
	s1ap/S1AP_RIMInformation.c	\
	s1ap/S1AP_RIMRoutingAddress.c	\
	s1ap/S1AP_ReportArea.c	\
	s1ap/S1AP_RepetitionPeriod.c	\
	s1ap/S1AP_RLFReportInformation.c	\
	s1ap/S1AP_RNC-ID.c	\
	s1ap/S1AP_RRC-Container.c	\
	s1ap/S1AP_RRC-Establishment-Cause.c	\
	s1ap/S1AP_ECGIListForRestart.c	\
	s1ap/S1AP_Routing-ID.c	\
	s1ap/S1AP_SecurityKey.c	\
	s1ap/S1AP_SecurityContext.c	\
	s1ap/S1AP_SerialNumber.c	\
	s1ap/S1AP_SONInformation.c	\
	s1ap/S1AP_SONInformation-Extension.c	\
	s1ap/S1AP_SONInformationRequest.c	\
	s1ap/S1AP_SONInformationReply.c	\
	s1ap/S1AP_SONInformationReport.c	\
	s1ap/S1AP_SONConfigurationTransfer.c	\
	s1ap/S1AP_SynchronisationInformation.c	\
	s1ap/S1AP_Source-ToTarget-TransparentContainer.c	\
	s1ap/S1AP_SourceBSS-ToTargetBSS-TransparentContainer.c	\
	s1ap/S1AP_SourceeNB-ID.c	\
	s1ap/S1AP_SRVCCOperationNotPossible.c	\
	s1ap/S1AP_SRVCCOperationPossible.c	\
	s1ap/S1AP_SRVCCHOIndication.c	\
	s1ap/S1AP_SourceeNB-ToTargeteNB-TransparentContainer.c	\
	s1ap/S1AP_SourceRNC-ToTargetRNC-TransparentContainer.c	\
	s1ap/S1AP_ServedGUMMEIs.c	\
	s1ap/S1AP_ServedGUMMEIsItem.c	\
	s1ap/S1AP_ServedGroupIDs.c	\
	s1ap/S1AP_ServedMMECs.c	\
	s1ap/S1AP_ServedPLMNs.c	\
	s1ap/S1AP_SubscriberProfileIDforRFP.c	\
	s1ap/S1AP_SupportedTAs.c	\
	s1ap/S1AP_SupportedTAs-Item.c	\
	s1ap/S1AP_StratumLevel.c	\
	s1ap/S1AP_SynchronisationStatus.c	\
	s1ap/S1AP_TimeSynchronisationInfo.c	\
	s1ap/S1AP_S-TMSI.c	\
	s1ap/S1AP_TAC.c	\
	s1ap/S1AP_TAIBasedMDT.c	\
	s1ap/S1AP_TAIListforMDT.c	\
	s1ap/S1AP_TAIListforWarning.c	\
	s1ap/S1AP_TAI.c	\
	s1ap/S1AP_TAI-Broadcast.c	\
	s1ap/S1AP_TAI-Broadcast-Item.c	\
	s1ap/S1AP_TAI-Cancelled.c	\
	s1ap/S1AP_TAI-Cancelled-Item.c	\
	s1ap/S1AP_TABasedMDT.c	\
	s1ap/S1AP_TAListforMDT.c	\
	s1ap/S1AP_CompletedCellinTAI.c	\
	s1ap/S1AP_CompletedCellinTAI-Item.c	\
	s1ap/S1AP_TBCD-STRING.c	\
	s1ap/S1AP_TargetID.c	\
	s1ap/S1AP_TargeteNB-ID.c	\
	s1ap/S1AP_TargetRNC-ID.c	\
	s1ap/S1AP_TargeteNB-ToSourceeNB-TransparentContainer.c	\
	s1ap/S1AP_Target-ToSource-TransparentContainer.c	\
	s1ap/S1AP_TargetRNC-ToSourceRNC-TransparentContainer.c	\
	s1ap/S1AP_TargetBSS-ToSourceBSS-TransparentContainer.c	\
	s1ap/S1AP_M1ThresholdEventA2.c	\
	s1ap/S1AP_Threshold-RSRP.c	\
	s1ap/S1AP_Threshold-RSRQ.c	\
	s1ap/S1AP_TimeToWait.c	\
	s1ap/S1AP_Time-UE-StayedInCell.c	\
	s1ap/S1AP_Time-UE-StayedInCell-EnhancedGranularity.c	\
	s1ap/S1AP_TransportInformation.c	\
	s1ap/S1AP_TransportLayerAddress.c	\
	s1ap/S1AP_TraceActivation.c	\
	s1ap/S1AP_TraceDepth.c	\
	s1ap/S1AP_E-UTRAN-Trace-ID.c	\
	s1ap/S1AP_TrafficLoadReductionIndication.c	\
	s1ap/S1AP_TunnelInformation.c	\
	s1ap/S1AP_TypeOfError.c	\
	s1ap/S1AP_TAIListForRestart.c	\
	s1ap/S1AP_UEAggregateMaximumBitrate.c	\
	s1ap/S1AP_UE-RetentionInformation.c	\
	s1ap/S1AP_UE-S1AP-IDs.c	\
	s1ap/S1AP_UE-S1AP-ID-pair.c	\
	s1ap/S1AP_UE-associatedLogicalS1-ConnectionItem.c	\
	s1ap/S1AP_UEIdentityIndexValue.c	\
	s1ap/S1AP_UE-HistoryInformation.c	\
	s1ap/S1AP_UE-HistoryInformationFromTheUE.c	\
	s1ap/S1AP_UEPagingID.c	\
	s1ap/S1AP_UERadioCapability.c	\
	s1ap/S1AP_UERadioCapabilityForPaging.c	\
	s1ap/S1AP_UE-RLF-Report-Container.c	\
	s1ap/S1AP_UE-RLF-Report-Container-for-extended-bands.c	\
	s1ap/S1AP_UESecurityCapabilities.c	\
	s1ap/S1AP_UESidelinkAggregateMaximumBitrate.c	\
	s1ap/S1AP_UE-Usage-Type.c	\
	s1ap/S1AP_UL-CP-SecurityInformation.c	\
	s1ap/S1AP_UL-NAS-MAC.c	\
	s1ap/S1AP_UL-NAS-Count.c	\
	s1ap/S1AP_UserLocationInformation.c	\
	s1ap/S1AP_UEUserPlaneCIoTSupportIndicator.c	\
	s1ap/S1AP_VoiceSupportMatchIndicator.c	\
	s1ap/S1AP_V2XServicesAuthorized.c	\
	s1ap/S1AP_VehicleUE.c	\
	s1ap/S1AP_PedestrianUE.c	\
	s1ap/S1AP_WarningAreaList.c	\
	s1ap/S1AP_WarningType.c	\
	s1ap/S1AP_WarningSecurityInfo.c	\
	s1ap/S1AP_WarningMessageContents.c	\
	s1ap/S1AP_X2TNLConfigurationInfo.c	\
	s1ap/S1AP_ENBX2ExtTLAs.c	\
	s1ap/S1AP_ENBX2ExtTLA.c	\
	s1ap/S1AP_ENBX2GTPTLAs.c	\
	s1ap/S1AP_ENBIndirectX2TransportLayerAddresses.c	\
	s1ap/S1AP_Criticality.c	\
	s1ap/S1AP_Presence.c	\
	s1ap/S1AP_PrivateIE-ID.c	\
	s1ap/S1AP_ProcedureCode.c	\
	s1ap/S1AP_ProtocolExtensionID.c	\
	s1ap/S1AP_ProtocolIE-ID.c	\
	s1ap/S1AP_TriggeringMessage.c	\
	s1ap/S1AP_ProtocolIE-Container.c	\
	s1ap/S1AP_ProtocolIE-SingleContainer.c	\
	s1ap/S1AP_ProtocolIE-Field.c	\
	s1ap/S1AP_ProtocolIE-ContainerList.c	\
	s1ap/S1AP_ProtocolExtensionContainer.c	\
	s1ap/S1AP_ProtocolExtensionField.c	\
	s1ap/S1AP_PrivateIE-Container.c	\
	s1ap/S1AP_PrivateIE-Field.c

ASN_MODULE_HDRS=	\
	s1ap/S1AP_S1AP-PDU.h	\
	s1ap/S1AP_InitiatingMessage.h	\
	s1ap/S1AP_SuccessfulOutcome.h	\
	s1ap/S1AP_UnsuccessfulOutcome.h	\
	s1ap/S1AP_E-RAB-IE-ContainerList.h	\
	s1ap/S1AP_E-RAB-IE-ContainerPairList.h	\
	s1ap/S1AP_ProtocolError-IE-ContainerList.h	\
	s1ap/S1AP_HandoverRequired.h	\
	s1ap/S1AP_HandoverCommand.h	\
	s1ap/S1AP_E-RABSubjecttoDataForwardingList.h	\
	s1ap/S1AP_E-RABDataForwardingItem.h	\
	s1ap/S1AP_HandoverPreparationFailure.h	\
	s1ap/S1AP_HandoverRequest.h	\
	s1ap/S1AP_E-RABToBeSetupListHOReq.h	\
	s1ap/S1AP_E-RABToBeSetupItemHOReq.h	\
	s1ap/S1AP_HandoverRequestAcknowledge.h	\
	s1ap/S1AP_E-RABAdmittedList.h	\
	s1ap/S1AP_E-RABAdmittedItem.h	\
	s1ap/S1AP_E-RABFailedtoSetupListHOReqAck.h	\
	s1ap/S1AP_E-RABFailedToSetupItemHOReqAck.h	\
	s1ap/S1AP_HandoverFailure.h	\
	s1ap/S1AP_HandoverNotify.h	\
	s1ap/S1AP_PathSwitchRequest.h	\
	s1ap/S1AP_E-RABToBeSwitchedDLList.h	\
	s1ap/S1AP_E-RABToBeSwitchedDLItem.h	\
	s1ap/S1AP_PathSwitchRequestAcknowledge.h	\
	s1ap/S1AP_E-RABToBeSwitchedULList.h	\
	s1ap/S1AP_E-RABToBeSwitchedULItem.h	\
	s1ap/S1AP_PathSwitchRequestFailure.h	\
	s1ap/S1AP_HandoverCancel.h	\
	s1ap/S1AP_HandoverCancelAcknowledge.h	\
	s1ap/S1AP_E-RABSetupRequest.h	\
	s1ap/S1AP_E-RABToBeSetupListBearerSUReq.h	\
	s1ap/S1AP_E-RABToBeSetupItemBearerSUReq.h	\
	s1ap/S1AP_E-RABSetupResponse.h	\
	s1ap/S1AP_E-RABSetupListBearerSURes.h	\
	s1ap/S1AP_E-RABSetupItemBearerSURes.h	\
	s1ap/S1AP_E-RABModifyRequest.h	\
	s1ap/S1AP_E-RABToBeModifiedListBearerModReq.h	\
	s1ap/S1AP_E-RABToBeModifiedItemBearerModReq.h	\
	s1ap/S1AP_E-RABModifyResponse.h	\
	s1ap/S1AP_E-RABModifyListBearerModRes.h	\
	s1ap/S1AP_E-RABModifyItemBearerModRes.h	\
	s1ap/S1AP_E-RABReleaseCommand.h	\
	s1ap/S1AP_E-RABReleaseResponse.h	\
	s1ap/S1AP_E-RABReleaseListBearerRelComp.h	\
	s1ap/S1AP_E-RABReleaseItemBearerRelComp.h	\
	s1ap/S1AP_E-RABReleaseIndication.h	\
	s1ap/S1AP_InitialContextSetupRequest.h	\
	s1ap/S1AP_E-RABToBeSetupListCtxtSUReq.h	\
	s1ap/S1AP_E-RABToBeSetupItemCtxtSUReq.h	\
	s1ap/S1AP_InitialContextSetupResponse.h	\
	s1ap/S1AP_E-RABSetupListCtxtSURes.h	\
	s1ap/S1AP_E-RABSetupItemCtxtSURes.h	\
	s1ap/S1AP_InitialContextSetupFailure.h	\
	s1ap/S1AP_Paging.h	\
	s1ap/S1AP_TAIList.h	\
	s1ap/S1AP_TAIItem.h	\
	s1ap/S1AP_UEContextReleaseRequest.h	\
	s1ap/S1AP_UEContextReleaseCommand.h	\
	s1ap/S1AP_UEContextReleaseComplete.h	\
	s1ap/S1AP_UEContextModificationRequest.h	\
	s1ap/S1AP_UEContextModificationResponse.h	\
	s1ap/S1AP_UEContextModificationFailure.h	\
	s1ap/S1AP_UERadioCapabilityMatchRequest.h	\
	s1ap/S1AP_UERadioCapabilityMatchResponse.h	\
	s1ap/S1AP_DownlinkNASTransport.h	\
	s1ap/S1AP_InitialUEMessage.h	\
	s1ap/S1AP_UplinkNASTransport.h	\
	s1ap/S1AP_NASNonDeliveryIndication.h	\
	s1ap/S1AP_RerouteNASRequest.h	\
	s1ap/S1AP_NASDeliveryIndication.h	\
	s1ap/S1AP_Reset.h	\
	s1ap/S1AP_ResetType.h	\
	s1ap/S1AP_ResetAll.h	\
	s1ap/S1AP_UE-associatedLogicalS1-ConnectionListRes.h	\
	s1ap/S1AP_ResetAcknowledge.h	\
	s1ap/S1AP_UE-associatedLogicalS1-ConnectionListResAck.h	\
	s1ap/S1AP_ErrorIndication.h	\
	s1ap/S1AP_S1SetupRequest.h	\
	s1ap/S1AP_S1SetupResponse.h	\
	s1ap/S1AP_S1SetupFailure.h	\
	s1ap/S1AP_ENBConfigurationUpdate.h	\
	s1ap/S1AP_ENBConfigurationUpdateAcknowledge.h	\
	s1ap/S1AP_ENBConfigurationUpdateFailure.h	\
	s1ap/S1AP_MMEConfigurationUpdate.h	\
	s1ap/S1AP_MMEConfigurationUpdateAcknowledge.h	\
	s1ap/S1AP_MMEConfigurationUpdateFailure.h	\
	s1ap/S1AP_DownlinkS1cdma2000tunnelling.h	\
	s1ap/S1AP_UplinkS1cdma2000tunnelling.h	\
	s1ap/S1AP_UECapabilityInfoIndication.h	\
	s1ap/S1AP_ENBStatusTransfer.h	\
	s1ap/S1AP_MMEStatusTransfer.h	\
	s1ap/S1AP_TraceStart.h	\
	s1ap/S1AP_TraceFailureIndication.h	\
	s1ap/S1AP_DeactivateTrace.h	\
	s1ap/S1AP_CellTrafficTrace.h	\
	s1ap/S1AP_LocationReportingControl.h	\
	s1ap/S1AP_LocationReportingFailureIndication.h	\
	s1ap/S1AP_LocationReport.h	\
	s1ap/S1AP_OverloadStart.h	\
	s1ap/S1AP_OverloadStop.h	\
	s1ap/S1AP_WriteReplaceWarningRequest.h	\
	s1ap/S1AP_WriteReplaceWarningResponse.h	\
	s1ap/S1AP_ENBDirectInformationTransfer.h	\
	s1ap/S1AP_Inter-SystemInformationTransferType.h	\
	s1ap/S1AP_MMEDirectInformationTransfer.h	\
	s1ap/S1AP_ENBConfigurationTransfer.h	\
	s1ap/S1AP_MMEConfigurationTransfer.h	\
	s1ap/S1AP_PrivateMessage.h	\
	s1ap/S1AP_KillRequest.h	\
	s1ap/S1AP_KillResponse.h	\
	s1ap/S1AP_PWSRestartIndication.h	\
	s1ap/S1AP_PWSFailureIndication.h	\
	s1ap/S1AP_DownlinkUEAssociatedLPPaTransport.h	\
	s1ap/S1AP_UplinkUEAssociatedLPPaTransport.h	\
	s1ap/S1AP_DownlinkNonUEAssociatedLPPaTransport.h	\
	s1ap/S1AP_UplinkNonUEAssociatedLPPaTransport.h	\
	s1ap/S1AP_E-RABModificationIndication.h	\
	s1ap/S1AP_E-RABToBeModifiedListBearerModInd.h	\
	s1ap/S1AP_E-RABToBeModifiedItemBearerModInd.h	\
	s1ap/S1AP_E-RABNotToBeModifiedListBearerModInd.h	\
	s1ap/S1AP_E-RABNotToBeModifiedItemBearerModInd.h	\
	s1ap/S1AP_CSGMembershipInfo.h	\
	s1ap/S1AP_E-RABModificationConfirm.h	\
	s1ap/S1AP_E-RABModifyListBearerModConf.h	\
	s1ap/S1AP_E-RABModifyItemBearerModConf.h	\
	s1ap/S1AP_UEContextModificationIndication.h	\
	s1ap/S1AP_UEContextModificationConfirm.h	\
	s1ap/S1AP_UEContextSuspendRequest.h	\
	s1ap/S1AP_UEContextSuspendResponse.h	\
	s1ap/S1AP_UEContextResumeRequest.h	\
	s1ap/S1AP_E-RABFailedToResumeListResumeReq.h	\
	s1ap/S1AP_E-RABFailedToResumeItemResumeReq.h	\
	s1ap/S1AP_UEContextResumeResponse.h	\
	s1ap/S1AP_E-RABFailedToResumeListResumeRes.h	\
	s1ap/S1AP_E-RABFailedToResumeItemResumeRes.h	\
	s1ap/S1AP_UEContextResumeFailure.h	\
	s1ap/S1AP_ConnectionEstablishmentIndication.h	\
	s1ap/S1AP_RetrieveUEInformation.h	\
	s1ap/S1AP_UEInformationTransfer.h	\
	s1ap/S1AP_ENBCPRelocationIndication.h	\
	s1ap/S1AP_MMECPRelocationIndication.h	\
	s1ap/S1AP_Additional-GUTI.h	\
	s1ap/S1AP_AreaScopeOfMDT.h	\
	s1ap/S1AP_AllocationAndRetentionPriority.h	\
	s1ap/S1AP_AssistanceDataForCECapableUEs.h	\
	s1ap/S1AP_AssistanceDataForPaging.h	\
	s1ap/S1AP_AssistanceDataForRecommendedCells.h	\
	s1ap/S1AP_Bearers-SubjectToStatusTransferList.h	\
	s1ap/S1AP_Bearers-SubjectToStatusTransfer-Item.h	\
	s1ap/S1AP_BearerType.h	\
	s1ap/S1AP_BitRate.h	\
	s1ap/S1AP_BPLMNs.h	\
	s1ap/S1AP_BroadcastCancelledAreaList.h	\
	s1ap/S1AP_BroadcastCompletedAreaList.h	\
	s1ap/S1AP_CancelledCellinEAI.h	\
	s1ap/S1AP_CancelledCellinEAI-Item.h	\
	s1ap/S1AP_CancelledCellinTAI.h	\
	s1ap/S1AP_CancelledCellinTAI-Item.h	\
	s1ap/S1AP_Cause.h	\
	s1ap/S1AP_CauseMisc.h	\
	s1ap/S1AP_CauseProtocol.h	\
	s1ap/S1AP_CauseRadioNetwork.h	\
	s1ap/S1AP_CauseTransport.h	\
	s1ap/S1AP_CauseNas.h	\
	s1ap/S1AP_CellAccessMode.h	\
	s1ap/S1AP_CellIdentifierAndCELevelForCECapableUEs.h	\
	s1ap/S1AP_CELevel.h	\
	s1ap/S1AP_CE-mode-B-SupportIndicator.h	\
	s1ap/S1AP_CellIdentity.h	\
	s1ap/S1AP_CellID-Broadcast.h	\
	s1ap/S1AP_CellID-Broadcast-Item.h	\
	s1ap/S1AP_CellID-Cancelled.h	\
	s1ap/S1AP_CellID-Cancelled-Item.h	\
	s1ap/S1AP_CellBasedMDT.h	\
	s1ap/S1AP_CellIdListforMDT.h	\
	s1ap/S1AP_Cdma2000PDU.h	\
	s1ap/S1AP_Cdma2000RATType.h	\
	s1ap/S1AP_Cdma2000SectorID.h	\
	s1ap/S1AP_Cdma2000HOStatus.h	\
	s1ap/S1AP_Cdma2000HORequiredIndication.h	\
	s1ap/S1AP_Cdma2000OneXSRVCCInfo.h	\
	s1ap/S1AP_Cdma2000OneXMEID.h	\
	s1ap/S1AP_Cdma2000OneXMSI.h	\
	s1ap/S1AP_Cdma2000OneXPilot.h	\
	s1ap/S1AP_Cdma2000OneXRAND.h	\
	s1ap/S1AP_Cell-Size.h	\
	s1ap/S1AP_CellType.h	\
	s1ap/S1AP_CGI.h	\
	s1ap/S1AP_CI.h	\
	s1ap/S1AP_CNDomain.h	\
	s1ap/S1AP_ConcurrentWarningMessageIndicator.h	\
	s1ap/S1AP_Correlation-ID.h	\
	s1ap/S1AP_CSFallbackIndicator.h	\
	s1ap/S1AP_AdditionalCSFallbackIndicator.h	\
	s1ap/S1AP_CSG-Id.h	\
	s1ap/S1AP_CSG-IdList.h	\
	s1ap/S1AP_CSG-IdList-Item.h	\
	s1ap/S1AP_CSGMembershipStatus.h	\
	s1ap/S1AP_COUNTvalue.h	\
	s1ap/S1AP_COUNTValueExtended.h	\
	s1ap/S1AP_COUNTvaluePDCP-SNlength18.h	\
	s1ap/S1AP_Coverage-Level.h	\
	s1ap/S1AP_CriticalityDiagnostics.h	\
	s1ap/S1AP_CriticalityDiagnostics-IE-List.h	\
	s1ap/S1AP_CriticalityDiagnostics-IE-Item.h	\
	s1ap/S1AP_DataCodingScheme.h	\
	s1ap/S1AP_DCN-ID.h	\
	s1ap/S1AP_ServedDCNs.h	\
	s1ap/S1AP_ServedDCNsItem.h	\
	s1ap/S1AP_DL-CP-SecurityInformation.h	\
	s1ap/S1AP_DL-Forwarding.h	\
	s1ap/S1AP_DL-NAS-MAC.h	\
	s1ap/S1AP_Direct-Forwarding-Path-Availability.h	\
	s1ap/S1AP_Data-Forwarding-Not-Possible.h	\
	s1ap/S1AP_DLNASPDUDeliveryAckRequest.h	\
	s1ap/S1AP_EARFCN.h	\
	s1ap/S1AP_ECGIList.h	\
	s1ap/S1AP_PWSfailedECGIList.h	\
	s1ap/S1AP_EmergencyAreaIDList.h	\
	s1ap/S1AP_EmergencyAreaID.h	\
	s1ap/S1AP_EmergencyAreaID-Broadcast.h	\
	s1ap/S1AP_EmergencyAreaID-Broadcast-Item.h	\
	s1ap/S1AP_EmergencyAreaID-Cancelled.h	\
	s1ap/S1AP_EmergencyAreaID-Cancelled-Item.h	\
	s1ap/S1AP_CompletedCellinEAI.h	\
	s1ap/S1AP_CompletedCellinEAI-Item.h	\
	s1ap/S1AP_ECGI-List.h	\
	s1ap/S1AP_EmergencyAreaIDListForRestart.h	\
	s1ap/S1AP_ENB-ID.h	\
	s1ap/S1AP_GERAN-Cell-ID.h	\
	s1ap/S1AP_Global-ENB-ID.h	\
	s1ap/S1AP_GUMMEIList.h	\
	s1ap/S1AP_ENB-StatusTransfer-TransparentContainer.h	\
	s1ap/S1AP_ENB-UE-S1AP-ID.h	\
	s1ap/S1AP_ENBname.h	\
	s1ap/S1AP_ENBX2TLAs.h	\
	s1ap/S1AP_EncryptionAlgorithms.h	\
	s1ap/S1AP_EnhancedCoverageRestricted.h	\
	s1ap/S1AP_EPLMNs.h	\
	s1ap/S1AP_EventType.h	\
	s1ap/S1AP_E-RAB-ID.h	\
	s1ap/S1AP_E-RABInformationList.h	\
	s1ap/S1AP_E-RABInformationListItem.h	\
	s1ap/S1AP_E-RABList.h	\
	s1ap/S1AP_E-RABItem.h	\
	s1ap/S1AP_E-RABLevelQoSParameters.h	\
	s1ap/S1AP_EUTRAN-CGI.h	\
	s1ap/S1AP_EUTRANRoundTripDelayEstimationInfo.h	\
	s1ap/S1AP_ExpectedUEBehaviour.h	\
	s1ap/S1AP_ExpectedUEActivityBehaviour.h	\
	s1ap/S1AP_ExpectedActivityPeriod.h	\
	s1ap/S1AP_ExpectedIdlePeriod.h	\
	s1ap/S1AP_SourceOfUEActivityBehaviourInformation.h	\
	s1ap/S1AP_ExpectedHOInterval.h	\
	s1ap/S1AP_ExtendedRNC-ID.h	\
	s1ap/S1AP_ExtendedRepetitionPeriod.h	\
	s1ap/S1AP_Extended-UEIdentityIndexValue.h	\
	s1ap/S1AP_ForbiddenInterRATs.h	\
	s1ap/S1AP_ForbiddenTAs.h	\
	s1ap/S1AP_ForbiddenTAs-Item.h	\
	s1ap/S1AP_ForbiddenTACs.h	\
	s1ap/S1AP_ForbiddenLAs.h	\
	s1ap/S1AP_ForbiddenLAs-Item.h	\
	s1ap/S1AP_ForbiddenLACs.h	\
	s1ap/S1AP_GBR-QosInformation.h	\
	s1ap/S1AP_GTP-TEID.h	\
	s1ap/S1AP_GUMMEI.h	\
	s1ap/S1AP_GUMMEIType.h	\
	s1ap/S1AP_GWContextReleaseIndication.h	\
	s1ap/S1AP_HandoverRestrictionList.h	\
	s1ap/S1AP_HandoverType.h	\
	s1ap/S1AP_HFN.h	\
	s1ap/S1AP_HFNModified.h	\
	s1ap/S1AP_HFNforPDCP-SNlength18.h	\
	s1ap/S1AP_Masked-IMEISV.h	\
	s1ap/S1AP_ImmediateMDT.h	\
	s1ap/S1AP_IMSI.h	\
	s1ap/S1AP_InformationOnRecommendedCellsAndENBsForPaging.h	\
	s1ap/S1AP_IntegrityProtectionAlgorithms.h	\
	s1ap/S1AP_IntendedNumberOfPagingAttempts.h	\
	s1ap/S1AP_InterfacesToTrace.h	\
	s1ap/S1AP_KillAllWarningMessages.h	\
	s1ap/S1AP_LAC.h	\
	s1ap/S1AP_LAI.h	\
	s1ap/S1AP_LastVisitedCell-Item.h	\
	s1ap/S1AP_LastVisitedEUTRANCellInformation.h	\
	s1ap/S1AP_LastVisitedUTRANCellInformation.h	\
	s1ap/S1AP_LastVisitedGERANCellInformation.h	\
	s1ap/S1AP_L3-Information.h	\
	s1ap/S1AP_LPPa-PDU.h	\
	s1ap/S1AP_LHN-ID.h	\
	s1ap/S1AP_Links-to-log.h	\
	s1ap/S1AP_ListeningSubframePattern.h	\
	s1ap/S1AP_LoggedMDT.h	\
	s1ap/S1AP_LoggingInterval.h	\
	s1ap/S1AP_LoggingDuration.h	\
	s1ap/S1AP_LoggedMBSFNMDT.h	\
	s1ap/S1AP_M3Configuration.h	\
	s1ap/S1AP_M3period.h	\
	s1ap/S1AP_M4Configuration.h	\
	s1ap/S1AP_M4period.h	\
	s1ap/S1AP_M5Configuration.h	\
	s1ap/S1AP_M5period.h	\
	s1ap/S1AP_M6Configuration.h	\
	s1ap/S1AP_M6report-Interval.h	\
	s1ap/S1AP_M6delay-threshold.h	\
	s1ap/S1AP_M7Configuration.h	\
	s1ap/S1AP_M7period.h	\
	s1ap/S1AP_MDT-Activation.h	\
	s1ap/S1AP_MDT-Location-Info.h	\
	s1ap/S1AP_MDT-Configuration.h	\
	s1ap/S1AP_ManagementBasedMDTAllowed.h	\
	s1ap/S1AP_MBSFN-ResultToLog.h	\
	s1ap/S1AP_MBSFN-ResultToLogInfo.h	\
	s1ap/S1AP_MDTPLMNList.h	\
	s1ap/S1AP_PrivacyIndicator.h	\
	s1ap/S1AP_MDTMode.h	\
	s1ap/S1AP_MDTMode-Extension.h	\
	s1ap/S1AP_MeasurementsToActivate.h	\
	s1ap/S1AP_MeasurementThresholdA2.h	\
	s1ap/S1AP_MessageIdentifier.h	\
	s1ap/S1AP_MobilityInformation.h	\
	s1ap/S1AP_MMEname.h	\
	s1ap/S1AP_MMEPagingTarget.h	\
	s1ap/S1AP_MMERelaySupportIndicator.h	\
	s1ap/S1AP_MME-Group-ID.h	\
	s1ap/S1AP_MME-Code.h	\
	s1ap/S1AP_MME-UE-S1AP-ID.h	\
	s1ap/S1AP_M-TMSI.h	\
	s1ap/S1AP_MSClassmark2.h	\
	s1ap/S1AP_MSClassmark3.h	\
	s1ap/S1AP_MutingAvailabilityIndication.h	\
	s1ap/S1AP_MutingPatternInformation.h	\
	s1ap/S1AP_NAS-PDU.h	\
	s1ap/S1AP_NASSecurityParametersfromE-UTRAN.h	\
	s1ap/S1AP_NASSecurityParameterstoE-UTRAN.h	\
	s1ap/S1AP_NB-IoT-DefaultPagingDRX.h	\
	s1ap/S1AP_NB-IoT-Paging-eDRXInformation.h	\
	s1ap/S1AP_NB-IoT-Paging-eDRX-Cycle.h	\
	s1ap/S1AP_NB-IoT-PagingTimeWindow.h	\
	s1ap/S1AP_NB-IoT-UEIdentityIndexValue.h	\
	s1ap/S1AP_NextPagingAreaScope.h	\
	s1ap/S1AP_NumberofBroadcastRequest.h	\
	s1ap/S1AP_NumberOfBroadcasts.h	\
	s1ap/S1AP_OldBSS-ToNewBSS-Information.h	\
	s1ap/S1AP_OverloadAction.h	\
	s1ap/S1AP_OverloadResponse.h	\
	s1ap/S1AP_PagingAttemptInformation.h	\
	s1ap/S1AP_PagingAttemptCount.h	\
	s1ap/S1AP_Paging-eDRXInformation.h	\
	s1ap/S1AP_Paging-eDRX-Cycle.h	\
	s1ap/S1AP_PagingTimeWindow.h	\
	s1ap/S1AP_PagingDRX.h	\
	s1ap/S1AP_PagingPriority.h	\
	s1ap/S1AP_PDCP-SN.h	\
	s1ap/S1AP_PDCP-SNExtended.h	\
	s1ap/S1AP_PDCP-SNlength18.h	\
	s1ap/S1AP_M1PeriodicReporting.h	\
	s1ap/S1AP_PLMNidentity.h	\
	s1ap/S1AP_Port-Number.h	\
	s1ap/S1AP_Pre-emptionCapability.h	\
	s1ap/S1AP_Pre-emptionVulnerability.h	\
	s1ap/S1AP_PriorityLevel.h	\
	s1ap/S1AP_ProSeAuthorized.h	\
	s1ap/S1AP_ProSeDirectDiscovery.h	\
	s1ap/S1AP_ProSeUEtoNetworkRelaying.h	\
	s1ap/S1AP_ProSeDirectCommunication.h	\
	s1ap/S1AP_PS-ServiceNotAvailable.h	\
	s1ap/S1AP_QCI.h	\
	s1ap/S1AP_ReceiveStatusofULPDCPSDUs.h	\
	s1ap/S1AP_ReceiveStatusOfULPDCPSDUsExtended.h	\
	s1ap/S1AP_ReceiveStatusOfULPDCPSDUsPDCP-SNlength18.h	\
	s1ap/S1AP_RecommendedCellsForPaging.h	\
	s1ap/S1AP_RecommendedCellList.h	\
	s1ap/S1AP_RecommendedCellItem.h	\
	s1ap/S1AP_RecommendedENBsForPaging.h	\
	s1ap/S1AP_RecommendedENBList.h	\
	s1ap/S1AP_RecommendedENBItem.h	\
	s1ap/S1AP_RelativeMMECapacity.h	\
	s1ap/S1AP_RelayNode-Indicator.h	\
	s1ap/S1AP_RAC.h	\
	s1ap/S1AP_RAT-Type.h	\
	s1ap/S1AP_ReportAmountMDT.h	\
	s1ap/S1AP_ReportIntervalMDT.h	\
	s1ap/S1AP_M1ReportingTrigger.h	\
	s1ap/S1AP_RequestType.h	\
	s1ap/S1AP_RIMTransfer.h	\
	s1ap/S1AP_RIMInformation.h	\
	s1ap/S1AP_RIMRoutingAddress.h	\
	s1ap/S1AP_ReportArea.h	\
	s1ap/S1AP_RepetitionPeriod.h	\
	s1ap/S1AP_RLFReportInformation.h	\
	s1ap/S1AP_RNC-ID.h	\
	s1ap/S1AP_RRC-Container.h	\
	s1ap/S1AP_RRC-Establishment-Cause.h	\
	s1ap/S1AP_ECGIListForRestart.h	\
	s1ap/S1AP_Routing-ID.h	\
	s1ap/S1AP_SecurityKey.h	\
	s1ap/S1AP_SecurityContext.h	\
	s1ap/S1AP_SerialNumber.h	\
	s1ap/S1AP_SONInformation.h	\
	s1ap/S1AP_SONInformation-Extension.h	\
	s1ap/S1AP_SONInformationRequest.h	\
	s1ap/S1AP_SONInformationReply.h	\
	s1ap/S1AP_SONInformationReport.h	\
	s1ap/S1AP_SONConfigurationTransfer.h	\
	s1ap/S1AP_SynchronisationInformation.h	\
	s1ap/S1AP_Source-ToTarget-TransparentContainer.h	\
	s1ap/S1AP_SourceBSS-ToTargetBSS-TransparentContainer.h	\
	s1ap/S1AP_SourceeNB-ID.h	\
	s1ap/S1AP_SRVCCOperationNotPossible.h	\
	s1ap/S1AP_SRVCCOperationPossible.h	\
	s1ap/S1AP_SRVCCHOIndication.h	\
	s1ap/S1AP_SourceeNB-ToTargeteNB-TransparentContainer.h	\
	s1ap/S1AP_SourceRNC-ToTargetRNC-TransparentContainer.h	\
	s1ap/S1AP_ServedGUMMEIs.h	\
	s1ap/S1AP_ServedGUMMEIsItem.h	\
	s1ap/S1AP_ServedGroupIDs.h	\
	s1ap/S1AP_ServedMMECs.h	\
	s1ap/S1AP_ServedPLMNs.h	\
	s1ap/S1AP_SubscriberProfileIDforRFP.h	\
	s1ap/S1AP_SupportedTAs.h	\
	s1ap/S1AP_SupportedTAs-Item.h	\
	s1ap/S1AP_StratumLevel.h	\
	s1ap/S1AP_SynchronisationStatus.h	\
	s1ap/S1AP_TimeSynchronisationInfo.h	\
	s1ap/S1AP_S-TMSI.h	\
	s1ap/S1AP_TAC.h	\
	s1ap/S1AP_TAIBasedMDT.h	\
	s1ap/S1AP_TAIListforMDT.h	\
	s1ap/S1AP_TAIListforWarning.h	\
	s1ap/S1AP_TAI.h	\
	s1ap/S1AP_TAI-Broadcast.h	\
	s1ap/S1AP_TAI-Broadcast-Item.h	\
	s1ap/S1AP_TAI-Cancelled.h	\
	s1ap/S1AP_TAI-Cancelled-Item.h	\
	s1ap/S1AP_TABasedMDT.h	\
	s1ap/S1AP_TAListforMDT.h	\
	s1ap/S1AP_CompletedCellinTAI.h	\
	s1ap/S1AP_CompletedCellinTAI-Item.h	\
	s1ap/S1AP_TBCD-STRING.h	\
	s1ap/S1AP_TargetID.h	\
	s1ap/S1AP_TargeteNB-ID.h	\
	s1ap/S1AP_TargetRNC-ID.h	\
	s1ap/S1AP_TargeteNB-ToSourceeNB-TransparentContainer.h	\
	s1ap/S1AP_Target-ToSource-TransparentContainer.h	\
	s1ap/S1AP_TargetRNC-ToSourceRNC-TransparentContainer.h	\
	s1ap/S1AP_TargetBSS-ToSourceBSS-TransparentContainer.h	\
	s1ap/S1AP_M1ThresholdEventA2.h	\
	s1ap/S1AP_Threshold-RSRP.h	\
	s1ap/S1AP_Threshold-RSRQ.h	\
	s1ap/S1AP_TimeToWait.h	\
	s1ap/S1AP_Time-UE-StayedInCell.h	\
	s1ap/S1AP_Time-UE-StayedInCell-EnhancedGranularity.h	\
	s1ap/S1AP_TransportInformation.h	\
	s1ap/S1AP_TransportLayerAddress.h	\
	s1ap/S1AP_TraceActivation.h	\
	s1ap/S1AP_TraceDepth.h	\
	s1ap/S1AP_E-UTRAN-Trace-ID.h	\
	s1ap/S1AP_TrafficLoadReductionIndication.h	\
	s1ap/S1AP_TunnelInformation.h	\
	s1ap/S1AP_TypeOfError.h	\
	s1ap/S1AP_TAIListForRestart.h	\
	s1ap/S1AP_UEAggregateMaximumBitrate.h	\
	s1ap/S1AP_UE-RetentionInformation.h	\
	s1ap/S1AP_UE-S1AP-IDs.h	\
	s1ap/S1AP_UE-S1AP-ID-pair.h	\
	s1ap/S1AP_UE-associatedLogicalS1-ConnectionItem.h	\
	s1ap/S1AP_UEIdentityIndexValue.h	\
	s1ap/S1AP_UE-HistoryInformation.h	\
	s1ap/S1AP_UE-HistoryInformationFromTheUE.h	\
	s1ap/S1AP_UEPagingID.h	\
	s1ap/S1AP_UERadioCapability.h	\
	s1ap/S1AP_UERadioCapabilityForPaging.h	\
	s1ap/S1AP_UE-RLF-Report-Container.h	\
	s1ap/S1AP_UE-RLF-Report-Container-for-extended-bands.h	\
	s1ap/S1AP_UESecurityCapabilities.h	\
	s1ap/S1AP_UESidelinkAggregateMaximumBitrate.h	\
	s1ap/S1AP_UE-Usage-Type.h	\
	s1ap/S1AP_UL-CP-SecurityInformation.h	\
	s1ap/S1AP_UL-NAS-MAC.h	\
	s1ap/S1AP_UL-NAS-Count.h	\
	s1ap/S1AP_UserLocationInformation.h	\
	s1ap/S1AP_UEUserPlaneCIoTSupportIndicator.h	\
	s1ap/S1AP_VoiceSupportMatchIndicator.h	\
	s1ap/S1AP_V2XServicesAuthorized.h	\
	s1ap/S1AP_VehicleUE.h	\
	s1ap/S1AP_PedestrianUE.h	\
	s1ap/S1AP_WarningAreaList.h	\
	s1ap/S1AP_WarningType.h	\
	s1ap/S1AP_WarningSecurityInfo.h	\
	s1ap/S1AP_WarningMessageContents.h	\
	s1ap/S1AP_X2TNLConfigurationInfo.h	\
	s1ap/S1AP_ENBX2ExtTLAs.h	\
	s1ap/S1AP_ENBX2ExtTLA.h	\
	s1ap/S1AP_ENBX2GTPTLAs.h	\
	s1ap/S1AP_ENBIndirectX2TransportLayerAddresses.h	\
	s1ap/S1AP_Criticality.h	\
	s1ap/S1AP_Presence.h	\
	s1ap/S1AP_PrivateIE-ID.h	\
	s1ap/S1AP_ProcedureCode.h	\
	s1ap/S1AP_ProtocolExtensionID.h	\
	s1ap/S1AP_ProtocolIE-ID.h	\
	s1ap/S1AP_TriggeringMessage.h	\
	s1ap/S1AP_ProtocolIE-Container.h	\
	s1ap/S1AP_ProtocolIE-SingleContainer.h	\
	s1ap/S1AP_ProtocolIE-Field.h	\
	s1ap/S1AP_ProtocolIE-ContainerPair.h	\
	s1ap/S1AP_ProtocolIE-FieldPair.h	\
	s1ap/S1AP_ProtocolIE-ContainerList.h	\
	s1ap/S1AP_ProtocolIE-ContainerPairList.h	\
	s1ap/S1AP_ProtocolExtensionContainer.h	\
	s1ap/S1AP_ProtocolExtensionField.h	\
	s1ap/S1AP_PrivateIE-Container.h	\
	s1ap/S1AP_PrivateIE-Field.h

ASN_MODULE_HDRS+=s1ap/S1AP_asn_constant.h

ASN_MODULE_HDRS+=common/ANY.h
ASN_MODULE_SRCS+=common/ANY.c
ASN_MODULE_HDRS+=common/OCTET_STRING.h
ASN_MODULE_HDRS+=common/OPEN_TYPE.h
ASN_MODULE_SRCS+=common/OPEN_TYPE.c
ASN_MODULE_HDRS+=common/constr_CHOICE.h
ASN_MODULE_HDRS+=common/BOOLEAN.h
ASN_MODULE_SRCS+=common/BOOLEAN.c
ASN_MODULE_HDRS+=common/INTEGER.h
ASN_MODULE_SRCS+=common/INTEGER.c
ASN_MODULE_HDRS+=common/NULL.h
ASN_MODULE_SRCS+=common/NULL.c
ASN_MODULE_HDRS+=common/NativeEnumerated.h
ASN_MODULE_SRCS+=common/NativeEnumerated.c
ASN_MODULE_HDRS+=common/NativeInteger.h
ASN_MODULE_SRCS+=common/NativeInteger.c
ASN_MODULE_HDRS+=common/OBJECT_IDENTIFIER.h
ASN_MODULE_SRCS+=common/OBJECT_IDENTIFIER.c
ASN_MODULE_HDRS+=common/PrintableString.h
ASN_MODULE_SRCS+=common/PrintableString.c
ASN_MODULE_HDRS+=common/asn_SEQUENCE_OF.h
ASN_MODULE_SRCS+=common/asn_SEQUENCE_OF.c
ASN_MODULE_HDRS+=common/asn_SET_OF.h
ASN_MODULE_SRCS+=common/asn_SET_OF.c
ASN_MODULE_SRCS+=common/constr_CHOICE.c
ASN_MODULE_HDRS+=common/constr_SEQUENCE.h
ASN_MODULE_SRCS+=common/constr_SEQUENCE.c
ASN_MODULE_HDRS+=common/constr_SEQUENCE_OF.h
ASN_MODULE_SRCS+=common/constr_SEQUENCE_OF.c
ASN_MODULE_HDRS+=common/constr_SET_OF.h
ASN_MODULE_SRCS+=common/constr_SET_OF.c
ASN_MODULE_HDRS+=common/asn_application.h
ASN_MODULE_SRCS+=common/asn_application.c
ASN_MODULE_HDRS+=common/asn_ioc.h
ASN_MODULE_HDRS+=common/asn_system.h
ASN_MODULE_HDRS+=common/asn_codecs.h
ASN_MODULE_HDRS+=common/asn_internal.h
ASN_MODULE_SRCS+=common/asn_internal.c
ASN_MODULE_HDRS+=common/asn_random_fill.h
ASN_MODULE_SRCS+=common/asn_random_fill.c
ASN_MODULE_HDRS+=common/asn_bit_data.h
ASN_MODULE_SRCS+=common/asn_bit_data.c
ASN_MODULE_SRCS+=common/OCTET_STRING.c
ASN_MODULE_HDRS+=common/BIT_STRING.h
ASN_MODULE_SRCS+=common/BIT_STRING.c
ASN_MODULE_SRCS+=common/asn_codecs_prim.c
ASN_MODULE_HDRS+=common/asn_codecs_prim.h
ASN_MODULE_HDRS+=common/ber_tlv_length.h
ASN_MODULE_SRCS+=common/ber_tlv_length.c
ASN_MODULE_HDRS+=common/ber_tlv_tag.h
ASN_MODULE_SRCS+=common/ber_tlv_tag.c
ASN_MODULE_HDRS+=common/ber_decoder.h
ASN_MODULE_SRCS+=common/ber_decoder.c
ASN_MODULE_HDRS+=common/der_encoder.h
ASN_MODULE_SRCS+=common/der_encoder.c
ASN_MODULE_HDRS+=common/constr_TYPE.h
ASN_MODULE_SRCS+=common/constr_TYPE.c
ASN_MODULE_HDRS+=common/constraints.h
ASN_MODULE_SRCS+=common/constraints.c
ASN_MODULE_HDRS+=common/xer_support.h
ASN_MODULE_SRCS+=common/xer_support.c
ASN_MODULE_HDRS+=common/xer_decoder.h
ASN_MODULE_SRCS+=common/xer_decoder.c
ASN_MODULE_HDRS+=common/xer_encoder.h
ASN_MODULE_SRCS+=common/xer_encoder.c
ASN_MODULE_HDRS+=common/per_support.h
ASN_MODULE_SRCS+=common/per_support.c
ASN_MODULE_HDRS+=common/per_decoder.h
ASN_MODULE_SRCS+=common/per_decoder.c
ASN_MODULE_HDRS+=common/per_encoder.h
ASN_MODULE_SRCS+=common/per_encoder.c
ASN_MODULE_HDRS+=common/per_opentype.h
ASN_MODULE_SRCS+=common/per_opentype.c
ASN_MODULE_HDRS+=common/oer_decoder.h
ASN_MODULE_HDRS+=common/oer_encoder.h
ASN_MODULE_HDRS+=common/oer_support.h
ASN_MODULE_SRCS+=common/oer_decoder.c
ASN_MODULE_SRCS+=common/oer_encoder.c
ASN_MODULE_SRCS+=common/oer_support.c
ASN_MODULE_SRCS+=common/OPEN_TYPE_oer.c
ASN_MODULE_SRCS+=common/INTEGER_oer.c
ASN_MODULE_SRCS+=common/BIT_STRING_oer.c
ASN_MODULE_SRCS+=common/OCTET_STRING_oer.c
ASN_MODULE_SRCS+=common/NativeInteger_oer.c
ASN_MODULE_SRCS+=common/NativeEnumerated_oer.c
ASN_MODULE_SRCS+=common/constr_CHOICE_oer.c
ASN_MODULE_SRCS+=common/constr_SEQUENCE_oer.c
ASN_MODULE_SRCS+=common/constr_SET_OF_oer.c

ASN_MODULE_CFLAGS=

pkglib_LTLIBRARIES=libasn1c.la
libasn1c_la_SOURCES= \
    $(ASN_MODULE_SRCS) $(ASN_MODULE_HDRS) \
    s1ap_asn1c.h s1ap_message.h \
    s1ap_decoder.c s1ap_encoder.c s1ap_free.c \
    $(NULL)

libasn1c_la_DEPENDENCIES = \
	@OGSCORE_LIBS@ \
    $(top_srcdir)/lib/base/libbase.la \
	$(NULL)

libasn1c_la_LIBADD = \
	@OGSCORE_LIBS@ \
    $(top_srcdir)/lib/base/libbase.la \
	$(NULL)

AM_CPPFLAGS = \
	@OGSCORE_CFLAGS@ \
    -I$(top_srcdir)/lib/asn1c/common \
    -I$(top_srcdir)/lib/asn1c/s1ap \
    -I$(top_srcdir)/lib \
	$(NULL)

AM_CFLAGS = \
	${ASN_MODULE_CFLAGS} \
	-Wno-parentheses-equality -Wno-overflow -Wno-format \
	$(NULL)

regen: regenerate-from-asn1-source

regenerate-from-asn1-source:
	ASN1C_PREFIX=S1AP_ ../../../../asn1c.velichkov/asn1c/asn1c -pdu=all -fcompound-names -findirect-choice -fno-include-deps ../support/r14.4.0/36413-e40.asn
	rm -f S1AP_E-RAB-IE-ContainerPairList.c S1AP_ProtocolError-IE-ContainerList.c S1AP_ProtocolIE-ContainerPair.c S1AP_ProtocolIE-FieldPair.c S1AP_ProtocolIE-ContainerPairList.c
	rm -f converter-example.mk converter-example.c pdu_collection.c
	rm -f Makefile.am.asn1convert Makefile.am.libasncodec

